resolve column padding on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -376,10 +376,7 @@ body.offcanvas {
     transform: translateX(300px); }
 
 .colorlib-narrow-content {
-  padding: 0 2.5em; }
-  @media screen and (max-width: 768px) {
-    .colorlib-narrow-content {
-      padding: 0; } }
+  padding: 0 2.5em;  }
 
 .no-gutters {
   margin: 0;
